[gd_scene load_steps=2 format=3 uid="uid://djk8bwt6fg0ae"]

[ext_resource type="Script" uid="uid://csmnmrkgwocyc" path="res://ui/main_menu/meta_upgrade_button.gd" id="1_hrpco"]

[node name="MetaUpgradeButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 104.0
script = ExtResource("1_hrpco")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 104.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PurchaseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="VBoxContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
